# ai-commerce-platform-backend

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 20260427_01_create_products.py  20260427_02_add_product_embeddings.py  20260427_03_create_users.py  20260427_04_cart_and_orders.py  20260427_05_product_images.py  20260428_01_audit_logs.py  20260428_02_rag_queries.py  20260428_03_widen_storage_key_urls.py  20260429_01_wishlist_reviews.py
scripts/: rq_worker.py  seed_products.py
src/app/: __init__.py  main.py
src/app/ai/: embeddings.py  llm.py
src/app/core/: config.py  errors.py  http_exceptions.py  logging.py  middleware.py  request_context.py  security.py
src/app/db/: init_db.py  redis.py  session.py
src/app/email/: base.py  console_backend.py  factory.py  smtp_backend.py
src/app/models/: __init__.py  audit_log.py  cart.py  order.py  product.py  product_image.py  rag_query.py  review.py  user.py  wishlist.py
src/app/repositories/: __init__.py  cart_repository.py  order_repository.py  review_repository.py  wishlist_repository.py
src/app/schemas/: admin.py  auth.py  cart.py  order.py  pagination.py  product.py  rag.py  review.py
src/app/services/: admin_service.py  audit_service.py  auth_service.py  cart_service.py  checkout_service.py  idempotency_service.py  order_service.py  password_reset_service.py  product_image_service.py  product_service.py  queue_service.py  (+8 more)
tests/: conftest.py  test_auth.py  test_cart.py  test_health.py  test_orders.py  test_production_hardening.py  test_products.py
(+15 files in other folders)
